--- a/assets/sass/main2.scss
+++ b/assets/sass/main2.scss
@@ -3492,7 +3492,7 @@ html.swipebox-html.swipebox-touch {
   text-decoration: none !important;
 
   border: none !important;
-  background-image: url(../img/swipebox/icons.webp);
+  background-image: url(../img/swipebox/icons.png);
   background-repeat: no-repeat;
 }
 
@@ -3935,7 +3935,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   width: 13px;
   height: 23px;
 
-  background-image: url(../img/sprite.webp);
+  background-image: url(../img/sprite.png);
   background-position: -13px -34px;
 }
 
@@ -3947,7 +3947,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   width: 13px;
   height: 23px;
 
-  background-image: url(../img/sprite.webp);
+  background-image: url(../img/sprite.png);
   background-position: 0 -34px;
 }
 
@@ -3987,7 +3987,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   text-indent: -9999px;
 
   outline: 0;
-  background: url(../img/controls.webp) -86px -11px no-repeat;
+  background: url(../img/controls.png) -86px -11px no-repeat;
 }
 
 .bx-wrapper .bx-controls-auto .bx-start:hover,
@@ -4011,7 +4011,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   text-indent: -9999px;
 
   outline: 0;
-  background: url(../img/controls.webp) -86px -44px no-repeat;
+  background: url(../img/controls.png) -86px -44px no-repeat;
 }
 
 .bx-wrapper .bx-controls-auto .bx-stop:hover,
@@ -4296,7 +4296,7 @@ header {
 .headliner {
   padding: 188px 0 155px;
 
-  background-image: url(../img/bg/headliner.webp);
+  background-image: url(../img/bg/headliner.jpg);
   h6,
   p {
     text-align: center;
@@ -4313,7 +4313,7 @@ header {
     text-align: center;
     text-transform: uppercase;
 
-    background-image: url(../img/headliner-logo.webp);
+    background-image: url(../img/headliner-logo.png);
     background-repeat: no-repeat;
     background-position: center bottom;
     i {
@@ -4417,13 +4417,13 @@ header {
     }
   }
   .soft-1 a {
-    background-image: url(../img/bg/ico-apple.webp);
+    background-image: url(../img/bg/ico-apple.png);
   }
   .soft-2 a {
-    background-image: url(../img/bg/ico-google.webp);
+    background-image: url(../img/bg/ico-google.png);
   }
   .soft-3 a {
-    background-image: url(../img/bg/ico-insta.webp);
+    background-image: url(../img/bg/ico-insta.png);
   }
 }
 
@@ -4581,7 +4581,7 @@ header {
 
         content: '';
 
-        background-image: url(../img/sprite.webp);
+        background-image: url(../img/sprite.png);
         background-position: -60px -24px;
       }
       &:nth-child(7):before,
@@ -4593,7 +4593,7 @@ header {
         width: 12px;
         height: 24px;
 
-        background-image: url(../img/sprite.webp);
+        background-image: url(../img/sprite.png);
         background-position: -60px 0;
       }
       &:first-child,
@@ -4656,7 +4656,7 @@ header {
 
       content: '';
 
-      background-image: url(../img/sprite.webp);
+      background-image: url(../img/sprite.png);
       background-position: -30px 0;
     }
     img {
@@ -4674,7 +4674,7 @@ header {
         width: 30px;
         height: 34px;
 
-        background-image: url(../img/sprite.webp);
+        background-image: url(../img/sprite.png);
         background-position: 0 0;
       }
     }
@@ -5042,7 +5042,7 @@ header {
   padding: 70px 0 100px;
 
   color: #fff;
-  background-image: url(../img/bg/reviews.webp);
+  background-image: url(../img/bg/reviews.jpg);
   h2 {
     color: #fff;
   }
@@ -5145,7 +5145,7 @@ header {
           width: 13px;
           height: 23px;
 
-          background-image: url(../img/sprite.webp);
+          background-image: url(../img/sprite.png);
           background-position: -13px -34px;
         }
       }
@@ -5155,7 +5155,7 @@ header {
           width: 13px;
           height: 23px;
 
-          background-image: url(../img/sprite.webp);
+          background-image: url(../img/sprite.png);
           background-position: 0 -34px;
         }
       }
@@ -5509,7 +5509,7 @@ header {
     content: '';
 
     opacity: 1;
-    background: url(../img/bg/programm.webp) #2c3049;
+    background: url(../img/bg/programm.jpg) #2c3049;
     background-repeat: no-repeat;
     background-position: center top;
     -webkit-background-size: cover;
@@ -6046,7 +6046,7 @@ footer {
     margin: 0 auto;
     padding: 250px 0 0;
 
-    background-image: url(../img/logo-footer.webp);
+    background-image: url(../img/logo-footer.png);
     background-repeat: no-repeat;
     background-position: center 60px;
     p {
@@ -6346,7 +6346,7 @@ footer {
       margin: 0 0 18px;
       padding: 0 90px 45px;
 
-      background-image: url(../img/headliner-logo-320.webp);
+      background-image: url(../img/headliner-logo-320.png);
       i {
         display: block;
 
@@ -6653,7 +6653,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: -13px -34px;
           }
         }
@@ -6663,7 +6663,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: 0 -34px;
           }
         }
@@ -6936,7 +6936,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: -13px -34px;
           }
         }
@@ -6946,7 +6946,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: 0 -34px;
           }
         }
