--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3492,7 +3492,7 @@ html.swipebox-html.swipebox-touch {
   text-decoration: none !important;
 
   border: none !important;
-  background-image: url(../img/swipebox/icons.webp);
+  background-image: url(../img/swipebox/icons.png);
   background-repeat: no-repeat;
 }
 
@@ -3934,7 +3934,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   width: 13px;
   height: 23px;
 
-  background-image: url(../img/sprite.webp);
+  background-image: url(../img/sprite.png);
   background-position: -13px -34px;
 }
 
@@ -3946,7 +3946,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   width: 13px;
   height: 23px;
 
-  background-image: url(../img/sprite.webp);
+  background-image: url(../img/sprite.png);
   background-position: 0 -34px;
 }
 
@@ -3986,7 +3986,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   text-indent: -9999px;
 
   outline: 0;
-  background: url(../img/controls.webp) -86px -11px no-repeat;
+  background: url(../img/controls.png) -86px -11px no-repeat;
 }
 
 .bx-wrapper .bx-controls-auto .bx-start:hover,
@@ -4010,7 +4010,7 @@ background: url(../img/bx_loader-red.gif) center center no-repeat #f02337; */
   text-indent: -9999px;
 
   outline: 0;
-  background: url(../img/controls.webp) -86px -44px no-repeat;
+  background: url(../img/controls.png) -86px -44px no-repeat;
 }
 
 .bx-wrapper .bx-controls-auto .bx-stop:hover,
@@ -4295,7 +4295,7 @@ header {
 .headliner {
   padding: 188px 0 155px;
 
-  background-image: url(../img/bg/headliner.webp);
+  background-image: url(../img/bg/headliner.jpg);
   h6,
   p {
     text-align: center;
@@ -4312,7 +4312,7 @@ header {
     text-align: center;
     text-transform: uppercase;
 
-    background-image: url(../img/headliner-logo.webp);
+    background-image: url(../img/headliner-logo.png);
     background-repeat: no-repeat;
     background-position: center bottom;
     i {
@@ -4416,13 +4416,13 @@ header {
     }
   }
   .soft-1 a {
-    background-image: url(../img/bg/ico-apple.webp);
+    background-image: url(../img/bg/ico-apple.png);
   }
   .soft-2 a {
-    background-image: url(../img/bg/ico-google.webp);
+    background-image: url(../img/bg/ico-google.png);
   }
   .soft-3 a {
-    background-image: url(../img/bg/ico-insta.webp);
+    background-image: url(../img/bg/ico-insta.png);
   }
 }
 
@@ -4580,7 +4580,7 @@ header {
 
         content: '';
 
-        background-image: url(../img/sprite.webp);
+        background-image: url(../img/sprite.png);
         background-position: -60px -24px;
       }
       &:nth-child(7):before,
@@ -4592,7 +4592,7 @@ header {
         width: 12px;
         height: 24px;
 
-        background-image: url(../img/sprite.webp);
+        background-image: url(../img/sprite.png);
         background-position: -60px 0;
       }
       &:first-child,
@@ -4655,7 +4655,7 @@ header {
 
       content: '';
 
-      background-image: url(../img/sprite.webp);
+      background-image: url(../img/sprite.png);
       background-position: -30px 0;
     }
     img {
@@ -4673,7 +4673,7 @@ header {
         width: 30px;
         height: 34px;
 
-        background-image: url(../img/sprite.webp);
+        background-image: url(../img/sprite.png);
         background-position: 0 0;
       }
     }
@@ -5041,7 +5041,7 @@ header {
   padding: 70px 0 100px;
 
   color: #fff;
-  background-image: url(../img/bg/reviews.webp);
+  background-image: url(../img/bg/reviews.jpg);
   h2 {
     color: #fff;
   }
@@ -5144,7 +5144,7 @@ header {
           width: 13px;
           height: 23px;
 
-          background-image: url(../img/sprite.webp);
+          background-image: url(../img/sprite.png);
           background-position: -13px -34px;
         }
       }
@@ -5154,7 +5154,7 @@ header {
           width: 13px;
           height: 23px;
 
-          background-image: url(../img/sprite.webp);
+          background-image: url(../img/sprite.png);
           background-position: 0 -34px;
         }
       }
@@ -5508,7 +5508,7 @@ header {
     content: '';
 
     opacity: 1;
-    background: url(../img/bg/programm.webp) #2c3049;
+    background: url(../img/bg/programm.jpg) #2c3049;
     background-repeat: no-repeat;
     background-position: center top;
     -webkit-background-size: cover;
@@ -6045,7 +6045,7 @@ footer {
     margin: 0 auto;
     padding: 250px 0 0;
 
-    background-image: url(../img/logo-footer.webp);
+    background-image: url(../img/logo-footer.png);
     background-repeat: no-repeat;
     background-position: center 60px;
     p {
@@ -6345,7 +6345,7 @@ footer {
       margin: 0 0 18px;
       padding: 0 90px 45px;
 
-      background-image: url(../img/headliner-logo-320.webp);
+      background-image: url(../img/headliner-logo-320.png);
       i {
         display: block;
 
@@ -6652,7 +6652,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: -13px -34px;
           }
         }
@@ -6662,7 +6662,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: 0 -34px;
           }
         }
@@ -6935,7 +6935,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: -13px -34px;
           }
         }
@@ -6945,7 +6945,7 @@ footer {
             width: 13px;
             height: 23px;
 
-            background-image: url(../img/sprite.webp);
+            background-image: url(../img/sprite.png);
             background-position: 0 -34px;
           }
         }
